welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: not found: value prendBisuit
  prendBisuit()
  ^BaggleSeeker:7: error: not found: value prendBisuit
  prendBisuit()
  ^