welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if(estSurBiscuit){
  prendBisuit()
}
while(!estFaceMur){
  avance()
  if(estSurBiscuit){
  prendBisuit()
}
}